modules/cluster-fargate/security-group-app.tf
resource "aws_security_group" "application_sg" {
  name        = "${var.cluster_name}-${var.env}-app"
  vpc_id      = aws_vpc.new.id

  ingress {
    protocol        = "tcp"
    from_port       = var.container_port
    to_port         = var.container_port
    security_groups = [aws_security_group.application_alb_sg.id]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
